fix: adjust quantity position in inventory for better alignment

--- a/Game/game.css
+++ b/Game/game.css
@@ -91,7 +91,7 @@ main {
 .quantity {
   position: absolute;
   top: 0.2rem;
-  right: -0.7rem;
+  right: -1rem;
   font-size: 1.5rem;
   pointer-events: none;
 }
